--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="es">
   <head>
@@ -6,29 +5,98 @@
     <title>Calculadora Azure</title>
     <style>
       body {
-        font-family: Arial, sans-serif;
-        margin: 2em;
+        min-height: 100vh;
+        margin: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: linear-gradient(135deg, #4f8cff 0%, #a6e1fa 100%);
+        font-family: "Segoe UI", Arial, sans-serif;
       }
-      input,
-      select,
+      .calc-container {
+        background: #fff;
+        border-radius: 18px;
+        box-shadow: 0 6px 32px rgba(0, 0, 0, 0.15);
+        padding: 2.5em 2em 2em 2em;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        min-width: 320px;
+      }
+      h1 {
+        color: #2563eb;
+        margin-bottom: 1.2em;
+        font-size: 2em;
+        letter-spacing: 1px;
+      }
+      input[type="number"],
+      select {
+        width: 180px;
+        padding: 0.7em;
+        margin: 0.5em 0;
+        border: 1px solid #d1d5db;
+        border-radius: 8px;
+        font-size: 1em;
+        outline: none;
+        transition: border 0.2s;
+      }
+      input[type="number"]:focus,
+      select:focus {
+        border: 1.5px solid #4f8cff;
+      }
       button {
-        margin: 0.5em;
+        width: 200px;
+        padding: 0.8em;
+        margin-top: 1em;
+        background: linear-gradient(90deg, #2563eb 60%, #4f8cff 100%);
+        color: #fff;
+        border: none;
+        border-radius: 8px;
+        font-size: 1.1em;
+        font-weight: bold;
+        cursor: pointer;
+        box-shadow: 0 2px 8px rgba(79, 140, 255, 0.12);
+        transition: background 0.2s, transform 0.1s;
+      }
+      button:hover {
+        background: linear-gradient(90deg, #1e40af 60%, #2563eb 100%);
+        transform: translateY(-2px) scale(1.03);
+      }
+      #resultado {
+        margin-top: 1.5em;
+        font-weight: bold;
+        font-size: 1.2em;
+        color: #2563eb;
+        min-height: 1.5em;
+      }
+      @media (max-width: 500px) {
+        .calc-container {
+          min-width: 90vw;
+          padding: 1.2em 0.5em;
+        }
+        input[type="number"],
+        select,
+        button {
+          width: 90vw;
+          min-width: 0;
+        }
       }
     </style>
   </head>
   <body>
-    <h1>Calculadora Azure</h1>
-    <input type="number" id="a" placeholder="Número A" />
-    <select id="op">
-      <option value="sum">Sumar</option>
-      <option value="sub">Restar</option>
-      <option value="mul">Multiplicar</option>
-      <option value="div">Dividir</option>
-    </select>
-    <input type="number" id="b" placeholder="Número B" />
-    <button onclick="calcular()">Calcular</button>
-    <div id="resultado" style="margin-top: 1em; font-weight: bold"></div>
-
+    <div class="calc-container">
+      <h1>CALCULADORA AZURE</h1>
+      <input type="number" id="a" placeholder="Número A" />
+      <select id="op">
+        <option value="sum">Sumar (+)</option>
+        <option value="sub">Restar (-)</option>
+        <option value="mul">Multiplicar (x)</option>
+        <option value="div">Dividir (÷)</option>
+      </select>
+      <input type="number" id="b" placeholder="Número B" />
+      <button onclick="calcular()">Calcular</button>
+      <div id="resultado"></div>
+    </div>
     <script>
       async function calcular() {
         const a = document.getElementById("a").value;
@@ -42,7 +110,6 @@
         }
 
         try {
-          // Cambia la URL según tu entorno: local o Azure
           const url = `https://calculadorademo-dphjg6ccb3cgcvem.eastus-01.azurewebsites.net/api/calculadora?a=${a}&b=${b}&op=${op}`;
           const response = await fetch(url);
           const data = await response.json();
